--- a/qwik/package.json
+++ b/qwik/package.json
@@ -24,6 +24,7 @@
     "@builder.io/qwik": "^1.1.4",
     "@builder.io/qwik-city": "^1.1.4",
     "@types/eslint": "8.37.0",
+    "@types/luxon": "^3.3.0",
     "@types/node": "^20.1.4",
     "@typescript-eslint/eslint-plugin": "5.59.5",
     "@typescript-eslint/parser": "5.59.5",
@@ -36,8 +37,10 @@
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
+    "@contentful/rich-text-types": "^16.2.0",
     "@vanilla-extract/css": "^1.11.0",
     "@vanilla-extract/vite-plugin": "^3.8.2",
-    "graphql-request": "^6.1.0"
+    "graphql-request": "^6.1.0",
+    "luxon": "^3.3.0"
   }
 }
