--- a/astro/package.json
+++ b/astro/package.json
@@ -10,12 +10,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@contentful/rich-text-html-renderer": "^16.0.4",
-    "@contentful/rich-text-types": "^16.1.0",
-    "astro": "^2.5.5",
-    "contentful": "^10.2.1",
+    "@astrojs/react": "^2.2.1",
+    "@contentful/rich-text-html-renderer": "^16.1.0",
+    "@contentful/rich-text-types": "^16.2.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@vanilla-extract/css": "^1.11.1",
+    "astro": "^2.6.3",
+    "astro-vanilla-extract": "^2.0.0",
+    "contentful": "^10.2.3",
     "graphql-request": "^6.1.0",
-    "luxon": "^3.3.0"
+    "luxon": "^3.3.0",
+    "ramda": "^0.29.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.9.0",
+    "react-player": "^2.12.0"
   },
   "devDependencies": {
     "@types/luxon": "^3.3.0"
